intern pages added

--- a/anuncios.html
+++ b/anuncios.html
@@ -17,7 +17,6 @@
 
           <nav class="nav">
             <a href="index.html"> Inicio </a>
-            <a target="_blank" href="tiendavirtual.html">Tienda Virtual</a>
             <a target="_blank" href="nosotros.html"> Nosotros </a>
             <a target="_blank" href="blog.html"> Blog </a>
             <a target="_blank" href="contacto.html"> Contacto </a>
@@ -62,7 +61,9 @@
               </li>
             </ul>
 
-            <a class="button yellow-button d-block" href="#">Ver propiedad</a>
+            <a class="button yellow-button d-block" href="anuncio.html"
+              >Ver propiedad</a
+            >
           </div>
         </div>
 
@@ -94,7 +95,9 @@
               </li>
             </ul>
 
-            <a class="button yellow-button d-block" href="#">Ver propiedad</a>
+            <a class="button yellow-button d-block" href="anuncio.html"
+              >Ver propiedad</a
+            >
           </div>
         </div>
 
@@ -127,7 +130,9 @@
               </li>
             </ul>
 
-            <a class="button yellow-button d-block" href="#">Ver propiedad</a>
+            <a class="button yellow-button d-block" href="anuncio.html"
+              >Ver propiedad</a
+            >
           </div>
         </div>
 
@@ -140,7 +145,7 @@
           <div class="card-body">
             <h4>Casa fuera de la ciudad</h4>
             <p>
-              Casa con alberca y acabados de lujo a las afueras de la ciudad. 
+              Casa con alberca y acabados de lujo a las afueras de la ciudad.
             </p>
             <p class="price">$5,000,000mxn</p>
 
@@ -159,7 +164,9 @@
               </li>
             </ul>
 
-            <a class="button yellow-button d-block" href="#">Ver propiedad</a>
+            <a class="button yellow-button d-block" href="anuncio.html"
+              >Ver propiedad</a
+            >
           </div>
         </div>
 
@@ -191,7 +198,9 @@
               </li>
             </ul>
 
-            <a class="button yellow-button d-block" href="#">Ver propiedad</a>
+            <a class="button yellow-button d-block" href="anuncio.html"
+              >Ver propiedad</a
+            >
           </div>
         </div>
 
@@ -224,7 +233,9 @@
               </li>
             </ul>
 
-            <a class="button yellow-button d-block" href="#">Ver propiedad</a>
+            <a class="button yellow-button d-block" href="anuncio.html"
+              >Ver propiedad</a
+            >
           </div>
         </div>
       </div>
@@ -240,7 +251,6 @@
       <div class="container footer-container">
         <nav class="nav">
           <a href="index.html"> Inicio</a>
-          <a target="_blank" href="tiendavirtual.html">Tienda Virtual</a>
           <a target="_blank" href="nosotros.html"> Nosotros </a>
           <a target="_blank" href="blog.html"> Blog </a>
           <a target="_blank" href="contacto.html"> Contacto </a>
