--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 
           <nav class="nav">
             <a target="_blank" href="nosotros.html"> Nosotros </a>
-            <a target="_blank" href="tiendavirtual.html">Tienda Virtual</a>
             <a target="_blank" href="anuncios.html"> Anuncios </a>
             <a target="_blank" href="blog.html"> Blog </a>
             <a target="_blank" href="contacto.html"> Contacto </a>
@@ -120,7 +119,7 @@
               </li>
             </ul>
 
-            <a class="button yellow-button d-block" href="#">Ver propiedad</a>
+            <a class="button yellow-button d-block" href="anuncio.html">Ver propiedad</a>
           </div>
         </div>
 
@@ -148,7 +147,7 @@
               </li>
             </ul>
 
-            <a class="button yellow-button d-block" href="#">Ver propiedad</a>
+            <a class="button yellow-button d-block" href="anuncio.html">Ver propiedad</a>
           </div>
         </div>
 
@@ -177,7 +176,7 @@
               </li>
             </ul>
 
-            <a class="button yellow-button d-block" href="#">Ver propiedad</a>
+            <a class="button yellow-button d-block" href="anuncio.html">Ver propiedad</a>
           </div>
         </div>
       </div>
@@ -273,10 +272,9 @@
       <div class="container footer-container">
         <nav class="nav">
           <a target="_blank" href="nosotros.html"> Nosotros </a>
-          <a target="_blank" href="tiendavirtual.html">Tienda Virtual</a>
           <a target="_blank" href="anuncios.html"> Anuncios </a>
           <a target="_blank" href="blog.html"> Blog </a>
-          <a target="_blank" href="contacto.html"> Anuncios </a>
+          <a target="_blank" href="contacto.html"> Contacto </a>
         </nav>
 
         <p class="copyright">Todos los Derechos Reservados 2020 &copy;</p>
