--- a/blog.html
+++ b/blog.html
@@ -1,22 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blog</title>
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Blog</title>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <!--Navbar-->
+    <header class="site-header">
+      <div class="container header-content">
+        <div class="navbar">
+          <a href="/index.html">
+            <img src="./assets/img/logo.svg" alt="#" />
+          </a>
 
-  <a href="/index.html">
-    <img src="./assets/img/logo.svg" alt="/">
-  </a>
+          <nav class="nav">
+            <a href="index.html"> Inicio </a>
+            <a target="_blank" href="nosotros.html"> Nosotros </a>
+            <a target="_blank" href="anuncios.html"> Anuncios </a>
+            <a target="_blank" href="contacto.html"> Contacto </a>
+          </nav>
+        </div>
+      </div>
+    </header>
 
-  <h1>Blog</h1>
-  <a href="index.html">Inicio</a>
-  <a target="_blank" href="nosotros.html"> Nosotros </a>
-  <a target="_blank" href="anuncios.html"> Anuncios </a>
-  <a target="_blank" href="contacto.html"> Contacto </a>
-  
-</body>
+    <!--Navbar-->
+
+    <!-- Main -->
+    <main class="container section centered-content">
+      <h1 class="fw-300 text-center">
+        Nuestro blog
+      </h1>
+
+      <article class="blog-entry">
+        <div class="blog-img">
+          <img src="./assets/img/blog1.jpg" alt="#" />
+        </div>
+
+        <div class="text-entry">
+          <a href="entrada.html">
+            <h4>Terraza en el techo de tu casa</h4>
+          </a>
+          <p>Escrito el: <span>20/10/2020</span> por: <span>Admin</span></p>
+          <p>
+            Consejos para construir una terraza en el techo de tu casa, con los
+            mejores materiales y ahorrando dinero.
+          </p>
+        </div>
+      </article>
+
+      <article class="blog-entry">
+        <div class="blog-img">
+          <img src="./assets/img/blog2.jpg" alt="#" />
+        </div>
+
+        <div class="text-entry">
+          <a href="entrada.html">
+            <h4>Consejos para poner alberca en casa</h4>
+          </a>
+          <p>Escrito el: <span>20/10/2020</span> por: <span>Admin</span></p>
+          <p>
+            Maximiza el espacio en tu hogar con esta guía, aprende a combinar
+            uebles y colores para darle vida a tu espacio.
+          </p>
+        </div>
+      </article>
+
+      <article class="blog-entry">
+        <div class="blog-img">
+          <img src="./assets/img/blog3.jpg" alt="#" />
+        </div>
+
+        <div class="text-entry">
+          <a href="entrada.html">
+            <h4>Libros para leer frente a la chimenea</h4>
+          </a>
+          <p>Escrito el: <span>20/10/2020</span> por: <span>Admin</span></p>
+          <p>
+            Algunos de los libros más recomendados por especialistas, para que leas
+            frente a la chimenea de tu hogar.
+          </p>
+        </div>
+      </article>
+
+      <article class="blog-entry">
+        <div class="blog-img">
+          <img src="./assets/img/blog4.jpg" alt="#" />
+        </div>
+
+        <div class="text-entry">
+          <a href="entrada.html">
+            <h4>Guía para lograr el "Zen" en tu habitación.</h4>
+          </a>
+          <p>Escrito el: <span>20/10/2020</span> por: <span>Admin</span></p>
+          <p>
+            Maximiza el espacio en tu hogar con esta guía, aprende a combinar
+            muebles y colores para darle un mejor flujo de energía a tu cuarto.
+          </p>
+        </div>
+      </article>
+
+      
+    </main>
+
+    <!-- Main -->
+
+    <!--Footer-->
+
+    <footer class="site-footer section">
+      <div class="container footer-container">
+        <nav class="nav">
+          <a href="index.html"> Inicio</a>
+          <a target="_blank" href="nosotros.html"> Nosotros </a>
+          <a target="_blank" href="anuncios.html"> Anuncios </a>
+          <a target="_blank" href="contacto.html"> Contacto </a>
+        </nav>
+
+        <p class="copyright">Todos los Derechos Reservados 2020 &copy;</p>
+      </div>
+    </footer>
+
+    <!--Footer-->
+  </body>
 </html>
