--- a/contacto.html
+++ b/contacto.html
@@ -8,16 +8,43 @@
 </head>
 <body>
 
-  <a href="/index.html">
-    <img src="./assets/img/logo.svg" alt="/">
-  </a>
-  
-  <h1>Contacto</h1>
-  <a href="index.html">Inicio</a>
-  <a target="_blank" href="nosotros.html"> Nosotros </a>
-  <a target="_blank" href="anuncios.html"> Anuncios </a>
-  <a target="_blank" href="blog.html"> Blog </a>
+ <!--Navbar-->
 
+ <header class="site-header">
+  <div class="container header-content">
+    <div class="navbar">
+      <a href="/index.html">
+        <img src="./assets/img/logo.svg" alt="#" />
+      </a>
+
+      <nav class="nav">
+        <a href="index.html"> Inicio </a>
+        <a target="_blank" href="anuncios.html"> Anuncios </a>
+        <a target="_blank" href="blog.html"> Blog </a>
+        <a target="_blank" href="contacto.html"> Contacto </a>
+      </nav>
+    </div>
+  </div>
+</header>
+
+<!--Navbar-->
+
+<!--Footer-->
+
+<footer class="site-footer section">
+  <div class="container footer-container">
+    <nav class="nav">
+      <a href="index.html"> Inicio</a>
+      <a target="_blank" href="nosotros.html"> Nosotros </a>
+      <a target="_blank" href="blog.html"> Blog </a>
+      <a target="_blank" href="contacto.html"> Contacto </a>
+    </nav>
+
+    <p class="copyright">Todos los Derechos Reservados 2020 &copy;</p>
+  </div>
+</footer>
+
+<!--Footer-->
 
 </body>
 </html>
