--- a/contacto.html
+++ b/contacto.html
@@ -1,50 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contacto</title>
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Contacto</title>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <!--Navbar-->
 
- <!--Navbar-->
+    <header class="site-header">
+      <div class="container header-content">
+        <div class="navbar">
+          <a href="/index.html">
+            <img src="./assets/img/logo.svg" alt="#" />
+          </a>
 
- <header class="site-header">
-  <div class="container header-content">
-    <div class="navbar">
-      <a href="/index.html">
-        <img src="./assets/img/logo.svg" alt="#" />
-      </a>
+          <nav class="nav">
+            <a href="index.html"> Inicio </a>
+            <a target="_blank" href="anuncios.html"> Anuncios </a>
+            <a target="_blank" href="blog.html"> Blog </a>
+            <a target="_blank" href="contacto.html"> Contacto </a>
+          </nav>
+        </div>
+      </div>
+    </header>
 
-      <nav class="nav">
-        <a href="index.html"> Inicio </a>
-        <a target="_blank" href="anuncios.html"> Anuncios </a>
-        <a target="_blank" href="blog.html"> Blog </a>
-        <a target="_blank" href="contacto.html"> Contacto </a>
-      </nav>
-    </div>
-  </div>
-</header>
+    <!--Navbar-->
 
-<!--Navbar-->
+    <!-- Info -->
 
-<!--Footer-->
+    <h1 class="fw-300 text-center">Contacto</h1>
+    <img src="./assets/img/destacada3.jpg" alt="Main img" />
 
-<footer class="site-footer section">
-  <div class="container footer-container">
-    <nav class="nav">
-      <a href="index.html"> Inicio</a>
-      <a target="_blank" href="nosotros.html"> Nosotros </a>
-      <a target="_blank" href="blog.html"> Blog </a>
-      <a target="_blank" href="contacto.html"> Contacto </a>
-    </nav>
+    <main class="container section centered-content">
+      <h2 class="fw-300 text-center">
+        Llenar formulario de contacto
+      </h2>
+      <!--Formulario-->
 
-    <p class="copyright">Todos los Derechos Reservados 2020 &copy;</p>
-  </div>
-</footer>
+      <form class="contact" action="">
+        <fieldset>
+          <legend>Información personal</legend>
 
-<!--Footer-->
+          <label for="name">Nombre: </label>
 
-</body>
+          <input
+            type="text"
+            id="name"
+            placeholder="Escribe tu nombre"
+            required
+          />
+
+          <label for="email">E-mail: </label>
+          <input
+            type="email"
+            id="email"
+            placeholder="Ej. micorreo@correo.com"
+            required
+          />
+
+          <label for="phone">Teléfono: </label>
+          <input type="tel" id="phone" placeholder="Tú teléfono" required />
+
+          <label for="message">Escibre un comentario: </label>
+          <textarea id="message"></textarea>
+
+          <!-- <input type="submit" /> -->
+        </fieldset>
+
+        <fieldset>
+          <legend>
+            Información sobre la propiedad
+          </legend>
+
+          <label for="options">Vende o compra</label>
+
+          <select id="options">
+            <option value="" disabled selected>--Selecciona--</option>
+            <option value="">Compra</option>
+            <option value="">Vende</option>
+          </select>
+
+          <label for="amount">Cantidad:</label>
+          <input type="number" id="amount" min="0" max="100" />
+        </fieldset>
+
+        <fieldset>
+          <legend>Contacto</legend>
+
+          <p>¿Cómo desea ser contactado?</p>
+
+          <div class="contact-feature">
+            <label for="phone">Teléfono</label>
+            <input type="radio" name="contact" value="phone" id="phone" />
+
+            <label for="correo">E-mail</label>
+            <input type="radio" name="contact" value="correo" id="correo" />
+          </div>
+
+          <p>Si eligió teléfono, elija fecha y hora</p>
+
+          <label for="date">
+            Fecha:
+          </label>
+          <input type="date" name="" id="date" />
+
+          <label for="time">Hora: </label>
+          <input type="time" name="" id="time" min="9:00" max="18:00" />
+        </fieldset>
+
+        <input type="submit" value="Enviar" class="button green-button" />
+      </form>
+
+      <!--Formulario-->
+    </main>
+
+    <!-- Info -->
+
+    <!--Footer-->
+
+    <footer class="site-footer section">
+      <div class="container footer-container">
+        <nav class="nav">
+          <a href="index.html"> Inicio</a>
+          <a target="_blank" href="nosotros.html"> Nosotros </a>
+          <a target="_blank" href="blog.html"> Blog </a>
+          <a target="_blank" href="contacto.html"> Contacto </a>
+        </nav>
+
+        <p class="copyright">Todos los Derechos Reservados 2020 &copy;</p>
+      </div>
+    </footer>
+
+    <!--Footer-->
+  </body>
 </html>
