--- a/contacto.html
+++ b/contacto.html
@@ -16,7 +16,14 @@
             <img src="./assets/img/logo.svg" alt="#" />
           </a>
 
-          <nav class="nav">
+
+          <div class="hamburger">
+            <a href="#navigation">
+              <img src="./assets/img/barras.svg" alt="hamburger menu">
+            </a>
+          </div>
+
+          <nav id="navigation" class="nav">
             <a href="index.html"> Inicio </a>
             <a target="_blank" href="anuncios.html"> Anuncios </a>
             <a target="_blank" href="blog.html"> Blog </a>
@@ -63,7 +70,7 @@
           <label for="phone">Teléfono: </label>
           <input type="tel" id="phone" placeholder="Tú teléfono" required />
 
-          <label for="message">Escibre un comentario: </label>
+          <label for="message">Escribe un comentario: </label>
           <textarea id="message"></textarea>
 
           <!-- <input type="submit" /> -->
