--- a/anuncios.html
+++ b/anuncios.html
@@ -15,7 +15,14 @@
             <img src="./assets/img/logo.svg" alt="#" />
           </a>
 
-          <nav class="nav">
+
+          <div class="hamburger">
+            <a href="#navigation">
+              <img src="./assets/img/barras.svg" alt="hamburger menu">
+            </a>
+          </div>
+
+          <nav id="navigation" class="nav">
             <a href="index.html"> Inicio </a>
             <a target="_blank" href="nosotros.html"> Nosotros </a>
             <a target="_blank" href="blog.html"> Blog </a>
