--- a/index.html
+++ b/index.html
@@ -20,13 +20,21 @@
           <a href="/index.html">
             <img src="./assets/img/logo.svg" alt="#" />
           </a>
+          <!-- hamburger menu-->
 
-          <nav class="nav">
+          <div class="hamburger">
+            <a href="#navigation">
+              <img src="./assets/img/barras.svg" alt="hamburger menu">
+            </a>
+          </div>
+
+          <nav id="navigation" class="nav">
             <a target="_blank" href="nosotros.html"> Nosotros </a>
             <a target="_blank" href="anuncios.html"> Anuncios </a>
             <a target="_blank" href="blog.html"> Blog </a>
             <a target="_blank" href="contacto.html"> Contacto </a>
           </nav>
+          <!-- hamburger menu-->
         </div>
 
         <h1>Venta de Casas y Departamentos Exclusivos de Lujo</h1>
@@ -100,7 +108,7 @@
             <h4>Casa de lujo en el lago</h4>
             <p>
               Casa en el lago con excelente vista, acabados de lujo a un
-              excelente precio
+              excelente precio.
             </p>
             <p class="price">$3,000,000mxn</p>
 
@@ -182,7 +190,7 @@
       </div>
 
       <div class="see-all">
-        <a class="button green-button" href="anuncios.html">
+        <a class="button green-button d-block" href="anuncios.html">
           Ver Todas
         </a>
       </div>
