normalize added, last styles added

--- a/anuncios.html
+++ b/anuncios.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Anuncios</title>
+    <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
@@ -49,7 +50,7 @@
             <h4>Casa de lujo en el lago</h4>
             <p>
               Casa en el lago con excelente vista, acabados de lujo a un
-              excelente precio
+              excelente precio.
             </p>
             <p class="price">$3,000,000mxn</p>
 
