--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <div class="card-body">
             <h4>Casa con acabados de lujo</h4>
             <p>
-              Casa con diseño moderno, así como tecnologia inteligente y
+              Casa con diseño moderno, así como tecnología inteligente y
               amueblada.
             </p>
             <p class="price">$2,000,000mxn</p>
