--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog</title>
+    <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
@@ -69,7 +70,7 @@
           <p>Escrito el: <span>20/10/2020</span> por: <span>Admin</span></p>
           <p>
             Maximiza el espacio en tu hogar con esta guía, aprende a combinar
-            uebles y colores para darle vida a tu espacio.
+            muebles y colores para darle vida a tu espacio.
           </p>
         </div>
       </article>
