switched to english

--- a/anuncio.html
+++ b/anuncio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Anuncio</title>
+    <title>Advertisement</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
   </head>
@@ -13,7 +13,8 @@
       <div class="container header-content">
         <div class="navbar">
           <a href="/index.html">
-            <img src="./assets/img/logo.svg" alt="#" />
+            <!-- <img src="./assets/img/logo.svg" alt="#" /> -->
+            <h1>Real Estates</h1>
           </a>
 
 
@@ -24,10 +25,10 @@
           </div>
 
           <nav id="navigation" class="nav">
-            <a href="index.html"> Inicio </a>
-            <a target="_blank" href="anuncios.html"> Anuncios </a>
+            <a href="index.html"> Home </a>
+            <a target="_blank" href="anuncios.html"> Advertisements </a>
             <a target="_blank" href="blog.html"> Blog </a>
-            <a target="_blank" href="contacto.html"> Contacto </a>
+            <a target="_blank" href="contacto.html"> Contact </a>
           </nav>
         </div>
       </div>
@@ -38,7 +39,7 @@
     <!-- Info -->
     
     <h1 class="fw-300 text-center">
-      Casa en venta frente al bosque
+      House for sale across the woods
     </h1>
     <img src="./assets/img/destacada.jpg" alt="img anuncio" />
 
@@ -46,7 +47,7 @@
       <!--Resumen propiedad-->
 
       <div class="resume-property">
-        <p class="price">$3,000,000</p>
+        <p class="price">$3,000usd</p>
         <ul class="icon-features">
           <li>
             <img src="assets/img/icono_wc.svg" alt="wc" />
@@ -96,13 +97,13 @@
     <footer class="site-footer section">
       <div class="container footer-container">
         <nav class="nav">
-          <a href="index.html"> Inicio</a>
-          <a target="_blank" href="anuncios.html"> Anuncios </a>
+          <a href="index.html"> Home </a>
+          <a target="_blank" href="anuncios.html"> Advertisements </a>
           <a target="_blank" href="blog.html"> Blog </a>
-          <a target="_blank" href="contacto.html"> Contacto </a>
+          <a target="_blank" href="contacto.html"> Contact </a>
         </nav>
 
-        <p class="copyright">Todos los Derechos Reservados 2020 &copy;</p>
+        <p class="copyright"> All rights reserved 2021 &copy;</p>
       </div>
     </footer>
 
