--- a/anuncios.html
+++ b/anuncios.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,13 +8,15 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
   </head>
+
   <body>
     <!--Navbar-->
     <header class="site-header">
       <div class="container header-content">
         <div class="navbar">
           <a href="/index.html">
-            <img src="./assets/img/logo.svg" alt="#" />
+            <!-- <img src="./assets/img/logo.svg" alt="#" /> -->
+            <h1>Real Estates</h1>
           </a>
 
 
@@ -24,10 +27,10 @@
           </div>
 
           <nav id="navigation" class="nav">
-            <a href="index.html"> Inicio </a>
-            <a target="_blank" href="nosotros.html"> Nosotros </a>
+            <a href="index.html"> Home </a>
+            <a target="_blank" href="nosotros.html"> About us </a>
             <a target="_blank" href="blog.html"> Blog </a>
-            <a target="_blank" href="contacto.html"> Contacto </a>
+            <a target="_blank" href="contacto.html"> Contact </a>
           </nav>
         </div>
       </div>
@@ -39,7 +42,7 @@
 
     <main class="section container">
       <h2 class="fw-300 text-center">
-        Casas y Departamentos en Venta
+        Houses and departments for sale
       </h2>
 
       <!-- Ad 1 -->
@@ -47,12 +50,11 @@
         <div class="card">
           <img src="./assets/img/anuncio1.jpg" alt="lake" />
           <div class="card-body">
-            <h4>Casa de lujo en el lago</h4>
+            <h4>Luxury Lakehouse</h4>
             <p>
-              Casa en el lago con excelente vista, acabados de lujo a un
-              excelente precio.
+              Excellent Lake House with amazing views and luxury finishes at an excellent price.
             </p>
-            <p class="price">$3,000,000mxn</p>
+            <p class="price">$3,000usd</p>
 
             <ul class="icon-features">
               <li>
@@ -69,9 +71,7 @@
               </li>
             </ul>
 
-            <a class="button yellow-button d-block" href="anuncio.html"
-              >Ver propiedad</a
-            >
+            <a class="button yellow-button d-block" href="anuncio.html">Take a look</a>
           </div>
         </div>
 
@@ -82,12 +82,11 @@
         <div class="card">
           <img src="./assets/img/anuncio2.jpg" alt="pool" />
           <div class="card-body">
-            <h4>Casa con acabados de lujo</h4>
+            <h4>House with luxury finishes</h4>
             <p>
-              Casa con diseño moderno, así como tecnologia inteligente y
-              amueblada.
+              House has a modern design, just like smart technology and furnished.
             </p>
-            <p class="price">$2,000,000mxn</p>
+            <p class="price">$2,000usd</p>
             <ul class="icon-features">
               <li>
                 <img src="assets/img/icono_wc.svg" alt="wc" />
@@ -103,9 +102,7 @@
               </li>
             </ul>
 
-            <a class="button yellow-button d-block" href="anuncio.html"
-              >Ver propiedad</a
-            >
+            <a class="button yellow-button d-block" href="anuncio.html">Take a look</a>
           </div>
         </div>
 
@@ -116,12 +113,11 @@
         <div class="card">
           <img src="./assets/img/anuncio3.jpg" alt="#" />
           <div class="card-body">
-            <h4>Casa con alberca</h4>
+            <h4>Poolhouse</h4>
             <p>
-              Casa con alberca y acabados de lujo con excelente ubicación en la
-              ciudad.
+              House with pool and luxury finishes with excellent location in the city.
             </p>
-            <p class="price">$7,000,000mxn</p>
+            <p class="price">$7,000usd</p>
 
             <ul class="icon-features">
               <li>
@@ -138,9 +134,7 @@
               </li>
             </ul>
 
-            <a class="button yellow-button d-block" href="anuncio.html"
-              >Ver propiedad</a
-            >
+            <a class="button yellow-button d-block" href="anuncio.html">Take a look</a>
           </div>
         </div>
 
@@ -151,11 +145,11 @@
         <div class="card">
           <img src="./assets/img/anuncio4.jpg" alt="casa lujo" />
           <div class="card-body">
-            <h4>Casa fuera de la ciudad</h4>
+            <h4>House on the outskirts of town</h4>
             <p>
-              Casa con alberca y acabados de lujo a las afueras de la ciudad.
+              Luxury house with amazing views at the very edge of the city
             </p>
-            <p class="price">$5,000,000mxn</p>
+            <p class="price">$5,000usd</p>
 
             <ul class="icon-features">
               <li>
@@ -172,9 +166,7 @@
               </li>
             </ul>
 
-            <a class="button yellow-button d-block" href="anuncio.html"
-              >Ver propiedad</a
-            >
+            <a class="button yellow-button d-block" href="anuncio.html">Take a look</a>
           </div>
         </div>
 
@@ -185,11 +177,11 @@
         <div class="card">
           <img src="./assets/img/anuncio5.jpg" alt="casa bosque" />
           <div class="card-body">
-            <h4>Casa frente al bosque</h4>
+            <h4>House across the woods</h4>
             <p>
-              Casa con alberca frente al bosque, excelente oportunidad.
+              House with a pool just across one of the most beautiful forests in the city.
             </p>
-            <p class="price">$3,500,000mxn</p>
+            <p class="price">$8,500usd</p>
 
             <ul class="icon-features">
               <li>
@@ -206,9 +198,7 @@
               </li>
             </ul>
 
-            <a class="button yellow-button d-block" href="anuncio.html"
-              >Ver propiedad</a
-            >
+            <a class="button yellow-button d-block" href="anuncio.html">Take a look</a>
           </div>
         </div>
 
@@ -219,12 +209,11 @@
         <div class="card">
           <img src="./assets/img/anuncio6.jpg" alt="casa alberca 2" />
           <div class="card-body">
-            <h4>Casa con alberca</h4>
+            <h4>Poolhouse</h4>
             <p>
-              Casa con alberca y acabados de lujo con excelente ubicación en la
-              ciudad.
+            House with pool and luxury finishes with excellent location in the town.
             </p>
-            <p class="price">$9,000,000mxn</p>
+            <p class="price">$9,000usd</p>
 
             <ul class="icon-features">
               <li>
@@ -241,9 +230,7 @@
               </li>
             </ul>
 
-            <a class="button yellow-button d-block" href="anuncio.html"
-              >Ver propiedad</a
-            >
+            <a class="button yellow-button d-block" href="anuncio.html">Take a look</a>
           </div>
         </div>
       </div>
@@ -258,16 +245,17 @@
     <footer class="site-footer section">
       <div class="container footer-container">
         <nav class="nav">
-          <a href="index.html"> Inicio</a>
-          <a target="_blank" href="nosotros.html"> Nosotros </a>
+          <a href="index.html"> Home </a>
+          <a target="_blank" href="nosotros.html"> About us </a>
           <a target="_blank" href="blog.html"> Blog </a>
-          <a target="_blank" href="contacto.html"> Contacto </a>
+          <a target="_blank" href="contacto.html"> Contact </a>
         </nav>
 
-        <p class="copyright">Todos los Derechos Reservados 2020 &copy;</p>
+        <p class="copyright">All rights reserved 2021 &copy;</p>
       </div>
     </footer>
 
     <!--Footer-->
   </body>
+
 </html>
