--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,13 +8,15 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
   </head>
+
   <body>
     <!--Navbar-->
     <header class="site-header">
       <div class="container header-content">
         <div class="navbar">
           <a href="/index.html">
-            <img src="./assets/img/logo.svg" alt="#" />
+            <!-- <img src="./assets/img/logo.svg" alt="#" /> -->
+            <h1>Real Estates</h1>
           </a>
 
 
@@ -24,10 +27,10 @@
           </div>
 
           <nav id="navigation" class="nav">
-            <a href="index.html"> Inicio </a>
-            <a target="_blank" href="nosotros.html"> Nosotros </a>
-            <a target="_blank" href="anuncios.html"> Anuncios </a>
-            <a target="_blank" href="contacto.html"> Contacto </a>
+            <a href="index.html"> Home </a>
+            <a target="_blank" href="nosotros.html"> About us </a>
+            <a target="_blank" href="anuncios.html"> Advertisements </a>
+            <a target="_blank" href="contacto.html"> Contact </a>
           </nav>
         </div>
       </div>
@@ -38,7 +41,7 @@
     <!-- Main -->
     <main class="container section centered-content">
       <h1 class="fw-300 text-center">
-        Nuestro blog
+        Our Blog
       </h1>
 
       <article class="blog-entry">
@@ -48,12 +51,11 @@
 
         <div class="text-entry">
           <a href="entrada.html">
-            <h4>Terraza en el techo de tu casa</h4>
+            <h4>How to build a rooftop</h4>
           </a>
-          <p>Escrito el: <span>20/10/2020</span> por: <span>Admin</span></p>
+          <p>Written: <span>20/10/2021</span> By: <span>Admin</span></p>
           <p>
-            Consejos para construir una terraza en el techo de tu casa, con los
-            mejores materiales y ahorrando dinero.
+            Tips to build a rooftop with the best and less expensive materials.
           </p>
         </div>
       </article>
@@ -65,12 +67,13 @@
 
         <div class="text-entry">
           <a href="entrada.html">
-            <h4>Consejos para poner alberca en casa</h4>
+            <h4>Tips to build a pool without bleeding your wallet.</h4>
           </a>
-          <p>Escrito el: <span>20/10/2020</span> por: <span>Admin</span></p>
+          <p>Written: <span>20/10/2021</span> by: <span>Admin</span></p>
           <p>
-            Maximiza el espacio en tu hogar con esta guía, aprende a combinar
-            muebles y colores para darle vida a tu espacio.
+            Take advantage of your home space with this quick guide! Learn how to mix the colors of your furniture with
+            no struggle
+            and give life to your space.
           </p>
         </div>
       </article>
@@ -82,12 +85,11 @@
 
         <div class="text-entry">
           <a href="entrada.html">
-            <h4>Libros para leer frente a la chimenea</h4>
+            <h4>Books for a great lecture infront of the fireplace</h4>
           </a>
-          <p>Escrito el: <span>20/10/2020</span> por: <span>Admin</span></p>
+          <p>Written: <span>20/10/2021</span> by: <span>Admin</span></p>
           <p>
-            Algunos de los libros más recomendados por especialistas, para que leas
-            frente a la chimenea de tu hogar.
+            Some of the best books recomended by specialits to read infront of the fireplace.
           </p>
         </div>
       </article>
@@ -99,17 +101,17 @@
 
         <div class="text-entry">
           <a href="entrada.html">
-            <h4>Guía para lograr el "Zen" en tu habitación.</h4>
+            <h4>Guide to unlock zen mode in your bedroom</h4>
           </a>
-          <p>Escrito el: <span>20/10/2020</span> por: <span>Admin</span></p>
+          <p>Written: <span>20/10/2021</span> by: <span>Admin</span></p>
           <p>
-            Maximiza el espacio en tu hogar con esta guía, aprende a combinar
-            muebles y colores para darle un mejor flujo de energía a tu cuarto.
+            Maximize the space in your home with this guide, learn to combine furniture and colors to give a better flow of energy
+            to your room.
           </p>
         </div>
       </article>
 
-      
+
     </main>
 
     <!-- Main -->
@@ -119,16 +121,17 @@
     <footer class="site-footer section">
       <div class="container footer-container">
         <nav class="nav">
-          <a href="index.html"> Inicio</a>
-          <a target="_blank" href="nosotros.html"> Nosotros </a>
-          <a target="_blank" href="anuncios.html"> Anuncios </a>
-          <a target="_blank" href="contacto.html"> Contacto </a>
+          <a href="index.html"> Home </a>
+          <a target="_blank" href="nosotros.html"> About us </a>
+          <a target="_blank" href="anuncios.html"> Advertisements </a>
+          <a target="_blank" href="contacto.html"> Contact </a>
         </nav>
 
-        <p class="copyright">Todos los Derechos Reservados 2020 &copy;</p>
+        <p class="copyright">All rights reserved 2021 &copy;</p>
       </div>
     </footer>
 
     <!--Footer-->
   </body>
+
 </html>
