--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contacto</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
   </head>
@@ -14,7 +14,7 @@
       <div class="container header-content">
         <div class="navbar">
           <a href="/index.html">
-            <img src="./assets/img/logo.svg" alt="#" />
+            <h1>Real Estates</h1>
           </a>
 
 
@@ -25,10 +25,10 @@
           </div>
 
           <nav id="navigation" class="nav">
-            <a href="index.html"> Inicio </a>
-            <a target="_blank" href="anuncios.html"> Anuncios </a>
+            <a href="index.html"> Home </a>
+            <a target="_blank" href="anuncios.html"> Advertisements </a>
             <a target="_blank" href="blog.html"> Blog </a>
-            <a target="_blank" href="contacto.html"> Contacto </a>
+            <a target="_blank" href="contacto.html"> Contact </a>
           </nav>
         </div>
       </div>
@@ -38,25 +38,25 @@
 
     <!-- Info -->
 
-    <h1 class="fw-300 text-center">Contacto</h1>
+    <h1 class="fw-300 text-center">Contact</h1>
     <img src="./assets/img/destacada3.jpg" alt="Main img" />
 
     <main class="container section centered-content">
       <h2 class="fw-300 text-center">
-        Llenar formulario de contacto
+        Fill-up the contact form.
       </h2>
       <!--Formulario-->
 
       <form class="contact" action="">
         <fieldset>
-          <legend>Información personal</legend>
+          <legend>Personal Information</legend>
 
-          <label for="name">Nombre: </label>
+          <label for="name">Name: </label>
 
           <input
             type="text"
             id="name"
-            placeholder="Escribe tu nombre"
+            placeholder="Type your name"
             required
           />
 
@@ -64,14 +64,14 @@
           <input
             type="email"
             id="email"
-            placeholder="Ej. micorreo@correo.com"
+            placeholder="Ej. mymail@mailExample.com"
             required
           />
 
-          <label for="phone">Teléfono: </label>
+          <label for="phone">Phone number: </label>
           <input type="tel" id="phone" placeholder="Tú teléfono" required />
 
-          <label for="message">Escribe un comentario: </label>
+          <label for="message">Write your comment: </label>
           <textarea id="message"></textarea>
 
           <!-- <input type="submit" /> -->
@@ -79,46 +79,46 @@
 
         <fieldset>
           <legend>
-            Información sobre la propiedad
+            House or Dept Info
           </legend>
 
-          <label for="options">Vende o compra</label>
+          <label for="options">Buy or Sell</label>
 
           <select id="options">
-            <option value="" disabled selected>--Selecciona--</option>
-            <option value="">Compra</option>
-            <option value="">Vende</option>
+            <option value="" disabled selected>--Select--</option>
+            <option value="">Buy</option>
+            <option value="">Sell</option>
           </select>
 
-          <label for="amount">Cantidad:</label>
+          <label for="amount">Quantity:</label>
           <input type="number" id="amount" min="0" max="100" />
         </fieldset>
 
         <fieldset>
-          <legend>Contacto</legend>
+          <legend>Contact</legend>
 
-          <p>¿Cómo desea ser contactado?</p>
+          <p>How do you want to be contacted?</p>
 
           <div class="contact-feature">
-            <label for="phone">Teléfono</label>
+            <label for="phone">Phone number</label>
             <input type="radio" name="contact" value="phone" id="phone" />
 
             <label for="correo">E-mail</label>
             <input type="radio" name="contact" value="correo" id="correo" />
           </div>
 
-          <p>Si eligió teléfono, elija fecha y hora</p>
+          <p>If you chose phone number please type date and hour : </p>
 
           <label for="date">
-            Fecha:
+            Date:
           </label>
           <input type="date" name="" id="date" />
 
-          <label for="time">Hora: </label>
+          <label for="time">Hour: </label>
           <input type="time" name="" id="time" min="9:00" max="18:00" />
         </fieldset>
 
-        <input type="submit" value="Enviar" class="button green-button" />
+        <input type="submit" value="Submit" class="button green-button" />
       </form>
 
       <!--Formulario-->
@@ -131,13 +131,13 @@
     <footer class="site-footer section">
       <div class="container footer-container">
         <nav class="nav">
-          <a href="index.html"> Inicio</a>
-          <a target="_blank" href="nosotros.html"> Nosotros </a>
+          <a href="index.html"> Home </a>
+          <a target="_blank" href="nosotros.html"> About us </a>
           <a target="_blank" href="blog.html"> Blog </a>
-          <a target="_blank" href="contacto.html"> Contacto </a>
+          <a target="_blank" href="contacto.html"> Contact </a>
         </nav>
 
-        <p class="copyright">Todos los Derechos Reservados 2020 &copy;</p>
+        <p class="copyright">All rights reserver 2021 &copy;</p>
       </div>
     </footer>
 
