--- a/entrada.html
+++ b/entrada.html
@@ -13,7 +13,8 @@
       <div class="container header-content">
         <div class="navbar">
           <a href="/index.html">
-            <img src="./assets/img/logo.svg" alt="#" />
+            <!-- <img src="./assets/img/logo.svg" alt="#" /> -->
+            <h1>Real Estates</h1>
           </a>
 
           <div class="hamburger">
@@ -23,11 +24,11 @@
           </div>
 
           <nav id="navigation" class="nav">
-            <a href="index.html"> Inicio </a>
-            <a target="_blank" href="nosotros.html"> Nosotros </a>
-            <a target="_blank" href="anuncios.html"> Anuncios </a>
+            <a href="index.html"> Home </a>
+            <a target="_blank" href="nosotros.html"> About us </a>
+            <a target="_blank" href="anuncios.html"> Advertisements </a>
             <a target="_blank" href="blog.html"> Blog </a>
-            <a target="_blank" href="contacto.html"> Contacto </a>
+            <a target="_blank" href="contacto.html"> Contact </a>
           </nav>
         </div>
       </div>
@@ -38,12 +39,12 @@
     <!-- Info -->
 
     <h1 class="fw-300 text-center">
-      Consejos para poner alberca en casa sin gastar demasiado
+      Quick guide to decorate you house.
     </h1>
     <img src="./assets/img/destacada2.jpg" alt="img principal" />
 
     <main class="container section centered-content text-entry">
-      <p>Escrito el: <span>20/10/2020</span> por: <span>Admin</span></p>
+      <p>Written: <span>20/10/2021</span> By: <span>Admin</span></p>
 
       <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit dolores
@@ -110,14 +111,14 @@
     <footer class="site-footer section">
       <div class="container footer-container">
         <nav class="nav">
-          <a href="index.html"> Inicio</a>
-          <a target="_blank" href="nosotros.html"> Nosotros </a>
-          <a target="_blank" href="anuncios.html">Anuncios </a>
+          <a href="index.html"> Home </a>
+          <a target="_blank" href="nosotros.html"> About us </a>
+          <a target="_blank" href="anuncios.html">Advertisements</a>
           <a target="_blank" href="blog.html"> Blog </a>
-          <a target="_blank" href="contacto.html"> Contacto </a>
+          <a target="_blank" href="contacto.html"> Contact </a>
         </nav>
 
-        <p class="copyright">Todos los Derechos Reservados 2020 &copy;</p>
+        <p class="copyright">All rights reserved 2021 &copy;</p>
       </div>
     </footer>
 
