--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       <div class="container header-content">
         <div class="navbar">
           <a href="/index.html">
-            <img src="./assets/img/logo.svg" alt="#" />
+            <!-- <img src="./assets/img/logo.svg" alt="#" /> -->
+            <h1>Real Estates</h1>
           </a>
           <!-- hamburger menu-->
 
@@ -29,15 +30,15 @@
           </div>
 
           <nav id="navigation" class="nav">
-            <a target="_blank" href="nosotros.html"> Nosotros </a>
-            <a target="_blank" href="anuncios.html"> Anuncios </a>
+            <a target="_blank" href="nosotros.html"> About us </a>
+            <a target="_blank" href="anuncios.html"> Advertisements </a>
             <a target="_blank" href="blog.html"> Blog </a>
-            <a target="_blank" href="contacto.html"> Contacto </a>
+            <a target="_blank" href="contacto.html"> Contact </a>
           </nav>
           <!-- hamburger menu-->
         </div>
 
-        <h1>Venta de Casas y Departamentos Exclusivos de Lujo</h1>
+        <h1>Exclusive houses and departments that you will love!</h1>
       </div>
     </header>
 
@@ -47,14 +48,14 @@
 
     <section class="container section">
       <h2 class="fw-300 text-center">
-        Más sobre nosotros
+        About us
       </h2>
 
       <div class="us-icons">
         <div class="icon">
           <img src="./assets/img/icono1.svg" alt="security" />
 
-          <h3>Seguridad</h3>
+          <h3>Security</h3>
 
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis
@@ -67,7 +68,7 @@
         <div class="icon">
           <img src="./assets/img/icono2.svg" alt="price" />
 
-          <h3>El mejor precio</h3>
+          <h3>Best price</h3>
 
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. In quos
@@ -80,7 +81,7 @@
         <div class="icon">
           <img src="./assets/img/icono3.svg" alt="time" />
 
-          <h3>A tiempo</h3>
+          <h3>On time</h3>
 
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat,
@@ -98,19 +99,18 @@
 
     <main class="section container">
       <h2 class="fw-300 text-center">
-        Casas y Departamentos en Venta
+       Aparments and houses for sale
       </h2>
 
       <div class="card-container">
         <div class="card">
           <img src="./assets/img/anuncio1.jpg" alt="#" />
           <div class="card-body">
-            <h4>Casa de lujo en el lago</h4>
+            <h4>Luxury Lake House</h4>
             <p>
-              Casa en el lago con excelente vista, acabados de lujo a un
-              excelente precio.
+              Excellent Lake House with amazing views and luxury finishes at an excellent price
             </p>
-            <p class="price">$3,000,000mxn</p>
+            <p class="price">$3,000usd</p>
 
             <ul class="icon-features">
               <li>
@@ -134,12 +134,11 @@
         <div class="card">
           <img src="./assets/img/anuncio2.jpg" alt="#" />
           <div class="card-body">
-            <h4>Casa con acabados de lujo</h4>
+            <h4>House with luxury finishes</h4>
             <p>
-              Casa con diseño moderno, así como tecnología inteligente y
-              amueblada.
+              House has a modern design, just like smart technology and furnished
             </p>
-            <p class="price">$2,000,000mxn</p>
+            <p class="price">$2,500usd</p>
             <ul class="icon-features">
               <li>
                 <img src="assets/img/icono_wc.svg" alt="wc" />
@@ -155,19 +154,18 @@
               </li>
             </ul>
 
-            <a class="button yellow-button d-block" href="anuncio.html">Ver propiedad</a>
+            <a class="button yellow-button d-block" href="anuncio.html">Take a look</a>
           </div>
         </div>
 
         <div class="card">
           <img src="./assets/img/anuncio3.jpg" alt="#" />
           <div class="card-body">
-            <h4>Casa con alberca</h4>
+            <h4>Poolhouse</h4>
             <p>
-              Casa con alberca y acabados de lujo con excelente ubicación en la
-              ciudad.
+              Poolhouse with amazing location and luxury finishes near city downtown.
             </p>
-            <p class="price">$7,000,000mxn</p>
+            <p class="price">$7,000usd</p>
 
             <ul class="icon-features">
               <li>
@@ -191,7 +189,7 @@
 
       <div class="see-all">
         <a class="button green-button d-block" href="anuncios.html">
-          Ver Todas
+          Take a look to all 
         </a>
       </div>
     </main>
@@ -202,13 +200,12 @@
 
     <section class="contact-img">
       <div class="container container-contact">
-        <h2>Encuentra la casa de tus sueños</h2>
+        <h2>Find the house of your dream!!</h2>
         <p>
-          Llena el formulario de contacto y en breve un asesor se pondrá en
-          contacto contigo.
+          Just fill-up the contact form and soon an agent will contact you.
         </p>
 
-        <a class="button yellow-button" href="contacto.html">Contactanos</a>
+        <a class="button yellow-button" href="contacto.html">Contact us!</a>
       </div>
     </section>
 
@@ -218,7 +215,7 @@
 
     <div class="low-section container section">
       <section class="blog">
-        <h3 class="text-center fw-300">Nuestro Blog</h3>
+        <h3 class="text-center fw-300">Our Blog</h3>
 
         <article class="blog-entry">
           <div class="blog-img">
@@ -227,12 +224,11 @@
 
           <div class="text-entry">
             <a href="entrada.html">
-              <h4>Terraza en el techo de tu casa</h4>
+              <h4>Roofgarden</h4>
             </a>
-            <p>Escrito el: <span>20/10/2020</span> por: <span>Admin</span></p>
-            <p>
-              Consejos para construir una terraza en el techo de tu casa, con
-              los mejores materiales y ahorrando dinero.
+            <p>Written: <span>20/10/2021</span> by: <span>Admin</span></p>
+            <p>           
+              Tips to build a Roofgarden with the best and less expensive materials.
             </p>
           </div>
         </article>
@@ -244,12 +240,12 @@
 
           <div class="text-entry">
             <a href="entrada.html">
-              <h4>Guía para la decoración de tu hogar</h4>
+              <h4>Quick guide to decorate you house</h4>
             </a>
-            <p>Escrito el: <span>20/10/2020</span> por: <span>Admin</span></p>
+            <p>Written: <span>20/10/2021</span> by: <span>Admin</span></p>
             <p>
-              Maximiza el espacio en tu hogar con esta guía, aprende a combinar
-              uebles y colores para darle vida a tu espacio.
+              Take advantage of your home space with this quick guide!
+              Learn how to mix the colors of your furniture with no struggle and give life to your space.
             </p>
           </div>
         </article>
@@ -261,11 +257,10 @@
 <!--Testimoniales-->
 
       <section class="testimonials">
-        <h3 class="text-center fw-300">Testimoniales</h3>
+        <h3 class="text-center fw-300">Testimonials</h3>
         <div class="testimonial">
           <blockquote>
-            "El personal se comportó de una excelente forma, muy buena atención
-            y la casa que me ofrecieron cumple con todas mis expectativas"
+            "The staff was doing a great job. They were excellent and so kind, they were giving us a very good service and the house was everything that they promised!""
           </blockquote>
           <p>- Juan de la Torre</p>
         </div>
@@ -279,13 +274,13 @@
     <footer class="site-footer section">
       <div class="container footer-container">
         <nav class="nav">
-          <a target="_blank" href="nosotros.html"> Nosotros </a>
-          <a target="_blank" href="anuncios.html"> Anuncios </a>
+          <a target="_blank" href="nosotros.html"> About us </a>
+          <a target="_blank" href="anuncios.html"> Advertisements </a>
           <a target="_blank" href="blog.html"> Blog </a>
-          <a target="_blank" href="contacto.html"> Contacto </a>
+          <a target="_blank" href="contacto.html"> Contact </a>
         </nav>
 
-        <p class="copyright">Todos los Derechos Reservados 2020 &copy;</p>
+        <p class="copyright">All rights reserved 2021 &copy;</p>
       </div>
     </footer>
 
